2002-12-06  Christopher Faylor  <cgf@redhat.com>

	* cygwin.din: Reflect name change from strtodf to strtof.  Export
	strtof.
	* include/cygwin/version.h: Bump API minor number.

2002-12-04  Steve Osborn  <bub@io.com>

	* fhandler.h (fhandler_termios::line_edit): Change return from an int
	to an enum to allow the function to return an error.
	* fhandler_console.cc (fhandler_console::read): Update the line_edit
	call to use the new enum.
	* fhandler_termios.cc (fhandler_termios::line_edit): Change return from
	an int to an enum to allow the function to return an error.  Put
	put_readahead call before doecho for future patch.
	* fhandler_tty.cc (fhandler_pty_master::write): Change to call
	line_edit one character at a time, and stop if an error occurs.

2002-12-04  Craig McGeachie  <slapdau@yahoo.com.au>

	* netdb.cc: New file.
	* Makeile.in (DLL_OFILES): Add reference to the new netdb.cc file.
	* cygwin.din : Add new aliased exports for service and protocol
	enumerations in netdb.cc.

2002-12-04  Thomas Pfaff  <tpfaff@gmx.net>

	* cxx.cc: New file. Implement new, new[], delete and delete[]
	operators and  __cxa_pure_virtual if compiled by gcc >=3.
	* Makefile.in (DLL_OFILES): Add cxx.o.
	Remove libstdc++.a from cygwin1.dll link step.

2002-11-29  Steve Osborn  <bub@io.com>

	* fhandler_tty.cc (fhandler_pty_master::accept_input): Move
	read_retval assignment to prevent race condition.  Remove read_retval
	from return statement.

2002-11-29  Christopher Faylor  <cgf@redhat.com>

	* pinfo.h (winpids::set): Renamed from init.
	(winpids::init): New declaration.
	(winpids::cs): Ditto.
	(winpids::winpids): Use set rather than init.
	* external.cc (fillout_pinfo): Ditto.
	* dcrt0.cc (dll_crt0_1): Call winpids::init.
	* pinfo.cc (winpids::set): Renamed from init.  Wrap calls in critical
	section.
	(winpids::init): New function.
	(winpids::cs): Define.

2002-11-28  Christopher Faylor  <cgf@redhat.com>

	* sigproc.cc (sig_dispatch_pending): Remove assertion.
